main.css
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

body {
  font-family: "Source Sans Pro", sans-serif;
  margin: 0;
  padding: 0;
}

.container {
	display: flex;
	align-items: center;
	justify-content: center;
	height: 600px;
}

.form {
	max-width: 50%;
	flex: 1;
}

#map {
	z-index: -1;
	position: absolute;
	top: 0;
	bottom: 0;
	width: 100%;
}

